src/objects/SSO_Contact__c.object
<CustomObject>
    <customHelpPage>SSO_Contact_Object_Level_Help</customHelpPage>
    <fields>
        <fullName>Buyer_Rating__c</fullName>
        <label>Buyer Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-5</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <formula>Contact__r.Num_Certifications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Certifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <inlineHelpText>Economic Buyer - Can sign for order
User Buyer - Must be in business, not BI or IT
SI Partner - Accenture, Capgemini, CGI, Claraview, Cognizant, Infocepts
Channel Partner - Incite, Ironside, NorthHighland, Pandera, QueBit</inlineHelpText>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Executive</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                </value>
                <value>
                    <fullName>Technical Executive</fullName>
                </value>
                <value>
                    <fullName>User Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SSO_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCs__c</fullName>
        <formula>Contact__r.Num_HealthChecks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># HCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Trim__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Contact__r.Most_Recent_Offer__r.Id, LEFT(Contact__r.Most_Recent_Offer__r.Name,20))</formula>
        <label>Last Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Buyer Rating Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityContactRoleID__c</fullName>
        <label>OpportunityContactRoleID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Opp_Plan_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <formula>Contact__r.Support_Liaison__c</formula>
        <label>Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Contact</label>
    <nameField>
        <displayFormat>SSOC-{00000000}</displayFormat>
        <label>Buying Influence Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSO Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>